--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -65,34 +65,40 @@ jobs:
         run: |
           cargo deb --no-build --output ./target/debian/zork.deb
           mv ./target/debian/zork.deb ./target/debian/zork++.deb
-      # TODO
-      - name: Sign binary Zork .deb
-        uses: lando/code-sign-action@v2
-        if: ${{ matrix.os == 'ubuntu-latest' }}
+        
+      - name: Sign release windows .exe
+        if: ${{ matrix.os == 'windows-latest'}}
+        uses: 'FKLC/sign-files-action@v1.0.0'
         with:
-          file: ./zork++/target/debian/zork++.deb
-          certificate-data: ${{ secrets.CERT_DATA }}
-          certificate-password: ${{ secrets.CERT_PASSWORD }}
+          privateKey: ${{ secrets.PRIVATE_KEY }}
+          passphrase: ${{ secrets.PASSPHRASE_PRIVATE_KEY }}
+          algorithm: 'RSA-SHA256'
+          #extension: '.sig'
+          outputFolder: '.\zork++\target\sign'
+          files: .\zork++\target\release\zork.exe
 
       - name: Building the installer with Inno Setup
         if: ${{ matrix.os == 'windows-latest' }}
         run: |
-          rename ".\zork++\target\release\zork.exe" "zork++.exe"
+          rename ".\zork++\target\sign\zork.exe" "zork++.exe"
           "%programfiles(x86)%\Inno Setup 6\iscc.exe" ".\release-config\windows-installer-zork.iss"
         shell: cmd
-      # TODO
-      - name: Sign binary Zork windows installer
-        uses: lando/code-sign-action@v2
-        if: ${{ matrix.os == 'windows-latest' }}
+      
+      - name: Sign windows installer
+        if: ${{ matrix.os == 'windows-latest'}}
+        uses: 'FKLC/sign-files-action@v1.0.0'
         with:
-          file: zork-installer.exe
-          certificate-data: ${{ secrets.CERT_DATA }}
-          certificate-password: ${{ secrets.CERT_PASSWORD }}
+          privateKey: ${{ secrets.PRIVATE_KEY }}
+          passphrase: ${{ secrets.PASSPHRASE_PRIVATE_KEY }}
+          algorithm: 'RSA-SHA256'
+          #extension: '.sig'
+          outputFolder: '.\zork++\target\sign'
+          files: .\zork-installer.exe
 
       - name: Make Zip for Windows
         if: ${{ matrix.os == 'windows-latest' }}
         run: |
-          7z a windows-installer.zip zork-installer.exe
+          7z a windows-installer.zip .\zork++\target\sign\zork-installer.exe
 
       - name: Generate compressed tar archive for Linux
         if: ${{ matrix.os == 'ubuntu-latest' }}
