--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -74,13 +74,14 @@ jobs:
           passphrase: ${{ secrets.PASSPHRASE_PRIVATE_KEY }}
           algorithm: 'RSA-SHA256'
           #extension: '.sig'
-          outputFolder: '.\zork++\target\sign'
+          outputFolder: '.\zork++\target\release\'
           files: .\zork++\target\release\zork.exe
 
       - name: Building the installer with Inno Setup
         if: ${{ matrix.os == 'windows-latest' }}
         run: |
-          rename ".\zork++\target\sign\zork.exe" "zork++.exe"
+          rm .\zork++\target\release\zork.exe
+          rename ".\zork++\target\release\zork.exe.sig" "zork++.exe"
           "%programfiles(x86)%\Inno Setup 6\iscc.exe" ".\release-config\windows-installer-zork.iss"
         shell: cmd
       
@@ -92,12 +93,14 @@ jobs:
           passphrase: ${{ secrets.PASSPHRASE_PRIVATE_KEY }}
           algorithm: 'RSA-SHA256'
           #extension: '.sig'
-          outputFolder: '.\zork++\target\sign'
-          files: .\zork-installer.exe
+          outputFolder: '.\'
+          files: .\zork-installer.exe.sig
 
       - name: Make Zip for Windows
         if: ${{ matrix.os == 'windows-latest' }}
         run: |
+          rm .\zork-installer.exe
+          rename .\zork-installer.exe.sig .\zork-installer.exe
           7z a windows-installer.zip .\zork++\target\sign\zork-installer.exe
 
       - name: Generate compressed tar archive for Linux
