--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -57,6 +57,7 @@ jobs:
           cargo build --release
 
       - name: Install cargo-deb
+        if: ${{ matrix.os == 'ubuntu-latest' }}
         run: |
           cargo install cargo-deb
 
