--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -81,8 +81,9 @@ jobs:
       
       - name: Dir target release
         if: ${{ matrix.os == 'windows-latest'}}
+        working-directory: ./zork++
         run:
-          dir .\zork++\target\release\
+          dir .\target\release\
 
       - name: Building the installer with Inno Setup
         if: ${{ matrix.os == 'windows-latest' }}
