--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -82,7 +82,7 @@ jobs:
       - name: Dir target release
         if: ${{ matrix.os == 'windows-latest'}}
         run: |
-          dir .\zork++\target\release\
+          dir /s .\zork++\target\release\
 
       - name: Building the installer with Inno Setup
         if: ${{ matrix.os == 'windows-latest' }}
