--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -82,8 +82,7 @@ jobs:
       - name: Building the installer with Inno Setup
         if: ${{ matrix.os == 'windows-latest' }}
         run: |
-          rm .\zork++\target\release\zork.exe
-          rename .\zork++\target\release\zork.exe.sig .\zork++\target\release\zork.exe
+          rename ".\zork++\target\release\zork.exe.sig" "zork++.exe"
           "%programfiles(x86)%\Inno Setup 6\iscc.exe" ".\release-config\windows-installer-zork.iss"
         shell: cmd
       
@@ -103,7 +102,7 @@ jobs:
         run: |
           rm .\zork-installer.exe
           rename .\zork-installer.exe.sig .\zork-installer.exe
-          7z a windows-installer.zip .\zork++\target\sign\zork-installer.exe
+          7z a windows-installer.zip .\zork-installer.exe
 
       - name: Generate compressed tar archive for Linux
         if: ${{ matrix.os == 'ubuntu-latest' }}
