--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -82,7 +82,8 @@ jobs:
       - name: Building the installer with Inno Setup
         if: ${{ matrix.os == 'windows-latest' }}
         run: |
-          rename ".\zork++\target\release\zork.exe.sig" "zork++.exe"
+          rm ".\zork++\target\release\zork.exe"
+          rename ".\zork++\target\release\zork.exe.sig" ".\zork++\target\release\zork.exe"
           "%programfiles(x86)%\Inno Setup 6\iscc.exe" ".\release-config\windows-installer-zork.iss"
         shell: cmd
       
